# utah-districts

./: .coverage  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
data/enacted/: UT-Utah-congressional-DRA.geojson
data/orange_3/: UT-C21Dist-O3.geojson
data/purple_4/: UT-C21Dist-P4.geojson
src/utah_bb/: __init__.py  cli.py  organize_maps.py
src/utah_districts/: __init__.py  cli.py  organize_maps.py
tests/: test_organize_maps.py
